tests/ui/consts/const-eval/generic-slice.stderr
error[E0493]: destructor of `[T; 0]` cannot be evaluated at compile-time
  --> $DIR/generic-slice.rs:9:27
   |
LL |         let x: &'a [T] = &[];
   |                           ^^ the destructor for this type cannot be evaluated in constants
...
LL |     };
   |     - value is dropped here

error[E0493]: destructor of `[T; 0]` cannot be evaluated at compile-time
  --> $DIR/generic-slice.rs:15:32
   |
LL |         let x: &'static [T] = &[]; 
   |                                ^^ the destructor for this type cannot be evaluated in constants
...
LL |     };
   |     - value is dropped here

error[E0597]: `x` does not live long enough
  --> $DIR/generic-slice.rs:17:9
   |
LL | impl<'a, T: 'static> Generic<'a, T> {
   |      -- lifetime `'a` defined here
...
LL |         &x
   |         ^^
   |         |
   |         borrowed value does not live long enough
   |         using this value as a constant requires that `x` is borrowed for `'a`
...
LL |     };
   |     - `x` dropped here while still borrowed

error[E0493]: destructor of `[RefCell<Vec<i32>>; 0]` cannot be evaluated at compile-time
  --> $DIR/generic-slice.rs:24:20
   |
LL |     let x: &[_] = &[];
   |                    ^^ the destructor for this type cannot be evaluated in statics
...
LL | };
   | - value is dropped here

error[E0493]: destructor of `[RefCell<Vec<i32>>; 0]` cannot be evaluated at compile-time
  --> $DIR/generic-slice.rs:30:20
   |
LL |     let x: &[_] = &[];
   |                    ^^ the destructor for this type cannot be evaluated in statics
...
LL | };
   | - value is dropped here

error[E0597]: `x` does not live long enough
  --> $DIR/generic-slice.rs:32:5
   |
LL |     &x
   |     ^^
   |     |
   |     borrowed value does not live long enough
   |     using this value as a static requires that `x` is borrowed for `'static`
LL |
LL | };
   | - `x` dropped here while still borrowed

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0493, E0597.
For more information about an error, try `rustc --explain E0493`.
